Fix text input spacing

--- a/src/css/brew.scss
+++ b/src/css/brew.scss
@@ -99,7 +99,7 @@ textarea {
   outline: 1px solid var(--color-light-gray);
   outline: none;
   margin: 0;
-
+  padding: 20px;
 }
 
 ol.package{
@@ -132,16 +132,16 @@ h2{
 }
 
 #packageForm{
-  margin-left: 20px;
+  // margin-left: 20px;
 }
 
 .entry{
   padding: 10px 10px;
   border-radius: 5px;
-  margin-top: 5px;
-  margin-right: 2px;
-  margin-bottom: 5px;
-  width: 80%;
+  margin: 10px 0px;
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
   border: 1px var(--color-light-gray);
   box-shadow: none;
 }
@@ -158,7 +158,7 @@ h2{
     font-size: 12px;
     margin: 5px 5px;
     cursor: pointer;
-    width: 19.5%;
+    width: 25%;
 }
 
 .popup {
